...

                    <TextView
                        android:id="@+id/item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/item_title_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="@string/required"
                        android:textColor="@color/red_light"
                        android:textSize="11sp"
...

                <EditText
                    android:id="@+id/item_title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
...

                    <TextView
                        android:id="@+id/item_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/item_description_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/item_description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
...

                    <TextView
                        android:id="@+id/item_purpose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/item_purpose_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/radioButtonExchange"
                        style="@style/ButtonStyle"
                        android:layout_width="100dp"
...
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/exchange_purpose"
                        android:textSize="13sp" />

                    <RadioButton style = "@style/ButtonStyle"
                        android:id="@+id/radioButtonDonate"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
...
                        android:checked="false"
                        android:padding="10dp"
                        android:text="@string/donate_purpose"
                        android:textSize="13sp"
                        android:fontFamily="@font/istok_web"/>
...

                <LinearLayout
                    android:id="@+id/layout_preferences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/item_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/item_category_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <Spinner
                    android:id="@+id/spinner_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/item_photos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/item_photos_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/text_other_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <LinearLayout
                    android:id="@+id/hidden_layout_other_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.apachat.loadingbutton.core.customViews.CircularProgressButton
                android:id="@+id/save_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
